# megalodon

./: .gitignore  HISTORY.md  INVARIANTS.md  MISSION.md  Makefile  README.md  STATUS.md  TASKS.md  handoff.md  launch-ARCHITECT.md  launch-AUDIT.md  launch-BACKEND.md  launch-FRONTEND.md  launch-META.md  launch-TEST.md  launch.md  ledger.yaml  package-lock.json  package.json  pyproject.toml  pytest.ini
.claude/: governor-settings.README.md  governor-settings.json  settings.example.json
docs/: v10-readiness-plan.md  v8-changeset.md  v8.1-candidate.md
hooks/: pre-commit  pre-push
megalodon_ui/: __init__.py  __main__.py  _logging.py  _tmux_version.py  _v92_constants.py  activity_wall.py  approval_rules.py  auth.py  config.py  constants.py  contract_loader.py  dashboard_open.py  event_tail.py  legacy_history.py  permission_watcher.py  preview.py  primitives.py  schemas.py  server.py  shutdown.py  signal_grammar.py  signal_parser.py  spawn.py  spawn_fake.py  tmux.py
runs_harness/: stimulus.py
scripts/: _agent_id.py  _config_loader.py  _fleet_tick.py  _intent_expired.py  _launch_helpers.py  _logging.py  _run_liveness.py  _shared_state.py  _state_read.py  _validation.py  aggregate_fleet_perf.py  archive_run.sh  atomic_close.py  check_megalodon_workers.sh  claim.sh  contract_scan.py  fleet_select.py  gen_js_constants.py  gen_lane_launches.py  governor_hook.py  launch_fleet.sh  migrate_claims_to_owner_txt.py  narrator_bench.py  new_run.sh  parse_session_tokens.py  poll.py  preflight.sh  queue_submit.py  run_e2e.sh  run_lib.sh  run_tests.sh  start_applier.sh  (+1 more)
ui/: SPEC.md  (+5 more)
(+689 files in other folders)
